<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@drawable/gradient"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="right"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Languaje"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:fontFamily="@font/abel"
            />
        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/space_languaje"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/bdrespana"
                />
            <ImageView
                android:layout_width="35dp"
                android:layout_height="30dp"
                android:src="@drawable/bdringlesa"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                />
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/bdrcatalunya"
                />

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imgLogin"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:src="@drawable/incidenciaslog"
        android:transitionName="logoImageTrans"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:id="@+id/txtBienvenidoLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/abel"
        android:text="@string/Saludo_Principal"
        android:textColor="#fff"
        android:textSize="40sp"
        android:textStyle="bold"
        android:transitionName="textTrans" />
    <TextView
        android:id="@+id/txtcontinuarLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Saludo_Secundario"
        android:textSize="24sp"
        android:transitionName="iniciaSesionTextTrans"
        android:fontFamily="@font/abel"
        android:textStyle="bold"
        android:textColor="@android:color/darker_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="14dp"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:id="@+id/tfemailLogin"
            android:hint="@string/EditText_correp"
            app:boxStrokeErrorColor="#F81B02"
            app:boxStrokeColor="#fff"
            android:textColorHint="#fff"
            app:hintTextColor="#fff"
            android:transitionName="emaiInputTextTrans"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmailLogin"
                android:layout_width="match_parent"
                android:fontFamily="@font/abel"
                android:textColor="#fff"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/email"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/email" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:id="@+id/tfpasswordLogin"
            android:hint="@string/EditText_contraseña"
            app:boxStrokeErrorColor="#F81B02"
            app:boxStrokeColor="#fff"
            android:textColorHint="#fff"
            app:hintTextColor="#fff"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#fff"
            android:transitionName="passwordInputTextTrans"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPasswordLogin"
                android:layout_width="match_parent"
                android:fontFamily="@font/abel"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="12dp"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/lock" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btninicioSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_INICIO"
            android:backgroundTint="#0093d7"
            android:textColor="#fff"
            android:transitionName="buttonTrans"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="5dp"/>

    </LinearLayout>

</LinearLayout>